update: 更新文件 快速入门.md 更新二进制下载链接
Signed-off-by: zgqhope <zgqhope@163.com>

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -206,7 +206,7 @@ open-eBackup工程中包含3个重要的目录：
     git clone https://gitcode.com/eBackup/open-eBackup.git
     ```
 
-4.  下载[open-eBackup-bin.tgz]https://support.huawei.com/enterprise/zh/flash-storage/oceanprotect-databackup-pid-258115661/software/264670844)到当前目录并解压。
+4.  下载[open-eBackup-bin.tgz]https://support.huawei.com/enterprise/zh/flash-storage/oceanprotect-databackup-pid-258115661/software/263716755?idAbsPath=fixnode01%7C7919749%7C251366268%7C250389224%7C251366267%7C258115661)到当前目录并解压。
     备注：如前期增加过下载白名单，可直接下载；如前期未增加下载白名单，则需向openebackup@163.com发送下载申请，并提供华为support账号
     ```
     mkdir -p open-eBackup-bin
