--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -84,6 +84,10 @@ open-eBackup工程中包含3个重要的目录：
     -   Infrastructure\_OM：基础设施，负责基础能力管理，如：数据库管理、缓存管理、检索引擎管理、消息队列管理等。
     -   DPAProduct: 构建脚本目录。
 
+## 兼容性说明
+
+open-eBackup通用服务器部署模式服务器兼容性继承openEuler操作系统硬件兼容性要求，当前镜像使用的操作系统版本为openEuler 22.03 LTS，open-eBackup服务器兼容性列表请参考[openEuler兼容性列表](https://www.openeuler.org/zh/compatibility/)。
+
 # 编译指导<a name="ZH-CN_TOPIC_0000001976671066"></a>
 
 
