Match-id-314aeab6e940636277f766104f11a833bf96307c

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -86,7 +86,7 @@ open-eBackup工程中包含3个重要的目录：
 
 ## 服务器兼容性说明
 
-open-eBackup通用服务器部署模式服务器兼容性继承openEuler操作系统硬件兼容性要求，当前镜像使用的操作系统版本为openEuler 22.03 LTS，open-eBackup服务器兼容性列表请参考[openEuler兼容性列表](https://www.openeuler.org/zh/compatibility/)。
+open-eBackup通用服务器部署模式服务器兼容性继承openEuler操作系统硬件兼容性要求，当前镜像使用的操作系统版本为openEuler 22.03 LTS，openEuler的兼容性列表请参考[openEuler兼容性列表](https://www.openeuler.org/zh/compatibility/)。
 
 # 编译指导<a name="ZH-CN_TOPIC_0000001976671066"></a>
 
