--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
@@ -860,6 +860,7 @@
   "common_about_website_label": "Website: <a class='aui-link' href='http://www.huawei.com/{0}' target='_blank'>http://www.huawei.com/{1}</a>",
   "common_whitebox_about_website_label": "Website: <a class='aui-link' href='{0}' target='_blank'>{0}</a>",
   "common_about_warning_label": "Warning: This computer program is protected by copyright law and international treaties. Unauthorized duplication or distribution of this program, or any portion of it, may result in severe civil or criminal penalties, and will be prosecuted to the maximum extent possible under the law.",
+  "common_about_open_backup_label": "open-eBackup provides E2E including data backup and data recovery capabilities for mainstream databases, virtualization, file systems, big data and other applications, helping users achieve efficient backup of critical data and save data protection investments.",
   "common_whitebox_about_warning_label": "Warning: {0}",
   "common_controller_label": "Controller",
   "common_vlan_id_desc_label": "The VLAN ID cannot be changed once being submitted. Ensure that the entered VLAN ID is correct before submitting it.",
