--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
@@ -909,6 +909,7 @@
   "common_oceancyber_product_version_label": "OceanCyber 300 1.2.0",
   "common_whitebox_product_version_label": "{0} @{product.version.formal}",
   "common_agent_file_label": "OceanProtect_DataProtect_@{product.version.formal}_client.zip",
+  "common_open_version_label": "open-eBackup 1.0.0",
   "common_abort_failed_label": "Stop Failed",
   "common_file_path_label": "File Path",
   "common_volume_path_label": "Volume Path",
