--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/common.json
@@ -894,6 +894,7 @@
   "common_oceancyber_product_version_label": "OceanCyber 300 1.2.0",
   "common_whitebox_product_version_label": "{0} @{product.version.formal}",
   "common_agent_file_label": "OceanProtect_DataProtect_@{product.version.formal}_client.zip",
+  "common_open_version_label": "open-eBackup 1.0.0",
   "common_abort_failed_label": "停止失败",
   "common_file_path_label": "文件路径",
   "common_volume_path_label": "卷路径",
